--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -1,2 +1,4 @@
+<%- include(template('layout/navbar/navbar')) %>
 <%- include(template('components/header')) %> 
 <%- include(template('pages/home')) %> 
+<%- include(template('layout/footer/footer')) %>
