--- a/templates/accomodations/accomodation.ejs
+++ b/templates/accomodations/accomodation.ejs
@@ -1,10 +1,16 @@
-<article class="col-md-4 col-sm-6 col-12 card card-horizontal">
-    <img src="<%- image("accomodations", accomodation.thumbnail) %>" class="card-thumbnail" />
-    <div class="card-info">
-        <a href="#"><%- accomodation.title %></a>
-        <span>Nuit à partir de <b><%- accomodation.pricePerNight %></b></span>
-        <div class="card-rating">
-            <%- include(template('accomodations/star'), { stars: accomodation.star }) %>
+<a href="#">
+    <article class="<%- classes %> ">
+        <%- include(template('assets/image'), {
+                collection: "accomodations",
+                thumbnail: accomodation.thumbnail, attributes: { class: ['card-thumbnail'] }
+            })
+        %>
+        <div class="card-info">
+            <h5><%- accomodation.title %></h5>
+            <span>Nuit à partir de <b><%- accomodation.pricePerNight %></b></span>
+            <div class="card-rating">
+                <%- include(template('accomodations/star'), { stars: accomodation.star }) %>
+            </div>
         </div>
-    </div>
-</article>
+    </article>
+</a>
