--- a/templates/pages/home.ejs
+++ b/templates/pages/home.ejs
@@ -1,4 +1,4 @@
-<main class="container">
-    <!-- <img class="image-responsive" src="assets/images/accomodations/lg/annie-spratt-Eg1qcIitAuA-unsplash.jpg" style="content: url('assets/images/accomodations/lg/aw-creative-VGs8z60yT2c-unsplash.jpg')"> -->
+<main>
     <%- include(template('accomodations/accomodations')) %> 
+    <%- include(template('activities/activities')) %> 
 </main>
