--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,14 +1,9 @@
-body {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
-}
-img {
-  width: 120px;
-  height: 100px;
-}
+@charset "UTF-8";
 
+@import "abstracts/abstracts";
 @import "vendors/vendors";
+@import "base/base";
+@import "components/components";
+@import "layout/layout";
+@import "pages/pages";
+@import "themes/themes";
