--- a/templates/components/filter.ejs
+++ b/templates/components/filter.ejs
@@ -1,4 +1,4 @@
-<div class="filter">
+<li class="filter">
     <div><i class="<%- filter.icon %>"></i></div>
-    <span><%- filter.label %></span>
-</div>
+    <span class="label"><%- filter.label %></span>
+</li>
