--- a/templates/components/searchbar.ejs
+++ b/templates/components/searchbar.ejs
@@ -1,7 +1,8 @@
-<div class="searchbar">
+
+<form class="searchbar" id="search">
     <div>
         <i class="fa-solid fa-location-dot"></i>
     </div>
-    <input type="text" placeholder="Marseille, France" />
-    <button>Rechercher</button>
-</div>
+    <input name="query" type="text" placeholder="Marseille, France" />
+   <input value="Rechercher" class="submit" type="submit" />
+</form>
