--- a/templates/layout/navbar/nav-button.ejs
+++ b/templates/layout/navbar/nav-button.ejs
@@ -1,3 +1,5 @@
-<a class="nav-btn <%- button.active ? 'active' : '' %>" href="<%- button.href %>">
-    <%- button.label %> 
-</a>
+<li class="<%- button.active ? 'active' : '' %>">
+    <a href="<%- button.href %>">
+        <%- button.label %> 
+    </a>
+</li>
