--- a/templates/components/header.ejs
+++ b/templates/components/header.ejs
@@ -1,16 +1,18 @@
-<header>
+<header class="layout">
     <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
     <p>En plein centre ville ou en pleine nature</p>
     <%- include(template('components/searchbar')) %>
     <%  const filters = data('filters') %>
     <div class="filters">
         <span>Filtres</span>
-        <%  for (const filter of filters) { %>
-            <%- include(template('components/filter'), { filter }) %>
-        <% } %>
+        <ul>
+            <%  for (const filter of filters) { %>
+                <%- include(template('components/filter'), { filter }) %>
+            <% } %>
+        </ul>
     </div>
-    <div>
+    <div class="info">
         <i class="fa-solid fa-info"></i>
-        <h5>Plus de 500 logements sont disponibles dans cette ville</h5>
+        <h6>Plus de 500 logements sont disponibles dans cette ville</h6>
     </div>
 </header>
