:lipstick: Finalized page responsiveness to support mobile browsers.

--- a/assets/styles/base/_default.scss
+++ b/assets/styles/base/_default.scss
@@ -1,8 +1,9 @@
 html {
   box-sizing: border-box;
-  font-size: 10px;
+  font-size: 10;
   font-family: Raleway, Sans-Serif;
 }
+
 html,
 body {
   height: 100%;
