--- a/assets/styles/components/_accomodations.scss
+++ b/assets/styles/components/_accomodations.scss
@@ -2,60 +2,88 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+
+  .container {
+    background-color: $tertiary;
+    height: auto;
+    border-radius: 1rem;
+
+    header {
+      display: flex;
+      justify-content: space-between;
+      margin: 1.5rem 0;
+      font-size: 1.6rem;
+    }
+
+    footer {
+      margin-top: 2.5rem;
+
+      button {
+        border: 0;
+        background-color: transparent;
+      }
+    }
+
+    .content {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+      gap: 1.5rem;
+      width: 100%;
+      flex: 2 1;
+
+      .fa-star {
+        color: $tertiary;
+
+        &.star-colored {
+          color: $primary;
+        }
+      }
+    }
+
+    &.vertical {
+      .content {
+        flex-direction: column;
+
+        a {
+          width: 100%;
+        }
+      }
+    }
+
+    &.horizontal {
+      footer button {
+        font-size: 1.4rem;
+        font-weight: 800;
+        padding: 0;
+      }
+    }
+
+    &:first-child {
+      width: calc(65% - 2rem);
+    }
+
+    &:last-child {
+      width: calc(35% - 2rem);
+    }
+  }
 }
 
-#accomodations .container {
-  background-color: $tertiary;
-  border-radius: 1rem;
-  width: auto;
-  height: auto;
-  header {
-    display: flex;
-    justify-content: space-between;
-    margin: 1.5rem 0px;
-    font-size: 1.6rem;
-  }
-  footer {
-    margin-top: 2.5rem;
-    button {
-      border: 0;
-      background-color: transparent;
-    }
-  }
-  .content {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+@include tablet {
+  #accomodations {
     align-items: center;
-    gap: 1.5rem;
+    flex-direction: column-reverse;
     width: 100%;
-    flex: 2 1;
-    .fa-star {
-      color: $tertiary;
-      &.star-colored {
-        color: $primary;
+
+    .container,
+    .container:last-child,
+    .container:first-child {
+      width: 100%;
+
+      .content {
+        justify-content: center;
       }
     }
-  }
-  &.vertical {
-    .content {
-      flex-direction: column;
-      a {
-        width: 100%;
-      }
-    }
-  }
-  &.horizontal {
-    footer button {
-      font-size: 1.4rem;
-      font-weight: 800;
-      padding: 0;
-    }
-  }
-  &:first-child {
-    width: calc(65% - 2rem);
-  }
-  &:last-child {
-    width: calc(35% - 2rem);
   }
 }
