--- a/assets/styles/components/_card.scss
+++ b/assets/styles/components/_card.scss
@@ -3,19 +3,25 @@
   display: flex;
   border-radius: 1rem;
   padding: 0.5rem;
+  box-shadow: 0 2px 4px 1px rgba(0, 0, 0, 0.07);
+
   &.horizontal {
     flex-direction: column;
     align-items: center;
+    border: 0.1rem solid $tertiary;
     min-width: 24.6rem;
+
     picture {
       width: 100%;
+
       img {
         width: 100%;
         height: 11.4rem;
-        border-radius: 1rem 1rem 0px 0px;
+        border-radius: 1rem 1rem 0 0;
         object-fit: cover;
       }
     }
+
     .card-info {
       height: 7.5rem;
       width: 100%;
@@ -23,57 +29,67 @@
       align-items: flex-start;
       flex-direction: column;
       justify-content: space-between;
+
       .card-text {
         margin-top: 1.2rem;
         display: flex;
         justify-content: space-between;
         flex-direction: column;
         color: #000;
+
         span {
           margin-top: 1.2rem;
         }
       }
+
       .card-rating {
         margin-bottom: 0.5rem;
       }
     }
   }
+
   &.vertical {
     flex-direction: row;
     justify-content: flex-start;
     width: 100%;
+
     picture {
-      border-radius: 1rem 0px 0px 1rem;
+      border-radius: 1rem 0 0 1rem;
       width: 12.7rem;
       height: 13.4rem;
       margin-right: 0;
+
       img {
         width: 100%;
         height: 100%;
-        border-radius: 1rem 0px 0px 1rem;
+        border-radius: 1rem 0 0 1rem;
         object-fit: cover;
       }
     }
+
     .card-info {
       display: flex;
       align-items: flex-start;
       flex-direction: column;
       justify-content: space-between;
       max-width: calc(100% - 12.7rem - 2rem - 1rem);
-      margin: 2rem;
-      margin-bottom: 1.5rem;
+      margin: 2rem 2rem 1.5rem;
+
       .card-text {
         display: flex;
         flex-direction: column;
+
         h5,
         span {
           color: #000;
           text-overflow: initial;
         }
+
         h5 {
           font-size: 1.1rem;
           font-weight: 800;
         }
+
         span {
           margin-top: 1.4rem;
         }
