--- a/assets/styles/components/_filter.scss
+++ b/assets/styles/components/_filter.scss
@@ -1,6 +1,9 @@
 li.filter {
   display: flex;
   position: relative;
+  height: 5rem;
+  margin-left: 2.5rem;
+
   div {
     @include flex-center;
     width: 5rem;
@@ -8,17 +11,20 @@ li.filter {
     border-radius: 50%;
     background-color: $secondary;
     z-index: 1;
-    transform: translateX(50%);
+    position: absolute;
+    left: -2.5rem;
+
     i.fa-solid {
       color: $primary;
       font-size: 1.9rem;
     }
   }
+
   & span.label {
     @include flex-center;
     width: auto;
     padding: 0.5rem 1.5rem 0.5rem 2.75rem;
-    border-radius: 0px 2.5rem 2.5rem 0px;
+    border-radius: 0 2.5rem 2.5rem 0;
     border: 0.2rem solid $tertiary;
     font-weight: 800;
     font-size: 1.6rem;
