--- a/assets/styles/layout/_footer.scss
+++ b/assets/styles/layout/_footer.scss
@@ -4,25 +4,41 @@ footer.layout {
   height: 21.8rem;
   display: flex;
   padding: 5rem;
+
   div {
     width: 33%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+
     b {
       font-size: 1.3rem;
     }
+
     ul {
       margin-top: 1.5rem;
       list-style-type: none;
+
       li {
         margin-bottom: 1rem;
+
         a {
           color: #000;
           font-size: 1.2rem;
         }
       }
+    }
+  }
+}
+
+@include phone {
+  footer.layout {
+    flex-direction: column;
+    height: auto;
+
+    div {
+      margin-bottom: 2.5rem;
     }
   }
 }
