--- a/assets/styles/layout/_navigation.scss
+++ b/assets/styles/layout/_navigation.scss
@@ -1,29 +1,35 @@
 nav.layout {
-  padding: 5rem 1.5rem 0px 6.5rem;
+  padding: 5rem 1.5rem 0 6.5rem;
   display: flex;
   justify-content: space-between;
   position: relative;
+
   img {
     width: 10rem;
     height: 5rem;
   }
+
   ul {
     display: flex;
+
     li {
       list-style-type: none;
       width: 16rem;
       margin-left: 7rem;
       text-align: center;
       font-size: 1.2rem;
+
       &:nth-last-child(1n) {
-        margin-left: 0rem;
+        margin-left: 0;
       }
+
       a {
         color: #000;
         font-size: 1.6rem;
         font-weight: 200;
         letter-spacing: 0.05rem;
       }
+
       &.active {
         &::after {
           content: "";
@@ -34,9 +40,49 @@ nav.layout {
           background-color: $primary;
           top: 0;
         }
+
         a {
           color: $primary;
           font-weight: 400;
+        }
+      }
+    }
+  }
+}
+
+@include phone {
+  nav.layout {
+    flex-direction: column;
+    align-items: center;
+    padding: 3rem 0 0;
+
+    & > img {
+      width: 6rem;
+      height: 2.8rem;
+    }
+
+    ul {
+      width: 100%;
+      justify-content: center;
+      margin-top: 2rem;
+
+      li {
+        width: 50%;
+        margin: 0;
+        position: relative;
+
+        &.active::after {
+          width: 100%;
+          top: 100%;
+        }
+
+        &:not(.active)::after {
+          content: "";
+          display: block;
+          position: absolute;
+          width: 100%;
+          height: 0.2rem;
+          background-color: $tertiary;
         }
       }
     }
