--- a/templates/components/searchbar.ejs
+++ b/templates/components/searchbar.ejs
@@ -1,8 +1,10 @@
-
 <form class="searchbar" id="search">
     <div>
         <i class="fa-solid fa-location-dot"></i>
     </div>
-    <input name="query" type="text" placeholder="Marseille, France" />
-   <input value="Rechercher" class="submit" type="submit" />
+    <input name="query" type="text" placeholder="Marseille, France"/>
+    <button class="submit">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <span>Rechercher</span>
+    </button>
 </form>
