--- a/templates/layout/navbar/nav-button.ejs
+++ b/templates/layout/navbar/nav-button.ejs
@@ -1,4 +1,4 @@
-<li class="<%- button.active ? 'active' : '' %>">
+<li <%- button.active ? 'class="active"' : '' %>>
     <a href="<%- button.href %>">
         <%- button.label %> 
     </a>
