--- a/assets/styles/components/_activities.scss
+++ b/assets/styles/components/_activities.scss
@@ -72,6 +72,8 @@
 
           h5 {
             font-weight: 700;
+            color: #000;
+            font-size: 1.5rem;
           }
         }
       }
