--- a/templates/layout/navbar/navbar.ejs
+++ b/templates/layout/navbar/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="layout">
     <a href="#">
-        <img src="/assets/images/logo/Booki.png" />
+        <img src="/assets/images/logo/Booki.png" alt="Booki logo"/>
     </a>
 
     <ul>
