--- a/templates/assets/image.ejs
+++ b/templates/assets/image.ejs
@@ -1,5 +1,5 @@
 <picture <%- attributes ? Object.keys(attributes).map((key) => `${key}="${attributes[key]}"`).join(' ') : null %> >
     <source media="(max-width:768px)" srcset="<%- image(collection, thumbnail, 'sm') %>"/>
     <source media="(max-width:992px) and (min-width:768px)" srcset="<%- image(collection, thumbnail, 'md') %>"/>
-    <img src="<%- image(collection, thumbnail, 'lg') %>"/>
+    <img src="<%- image(collection, thumbnail, 'lg') %>" alt="<%= alt %>"/>
 </picture>
