--- a/assets/styles/layout/_navigation.scss
+++ b/assets/styles/layout/_navigation.scss
@@ -71,18 +71,21 @@ nav.layout {
         margin: 0;
         position: relative;
 
-        &.active::after {
-          width: 100%;
-          top: 100%;
-        }
-
-        &:not(.active)::after {
+        &::after {
           content: "";
           display: block;
           position: absolute;
-          width: 100%;
           height: 0.2rem;
+        }
+
+        &:not(.active)::after {
           background-color: $tertiary;
+        }
+
+        &::after,
+        &.active::after {
+          width: 100%;
+          top: 140%;
         }
       }
     }
